--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: #0B0C10;
     color: white;
-    text-shadow: 2px 2px 4px #000000;
+    text-shadow: 4px 4px 4px #000000;
 }
 #net{
   width: 100%;
@@ -67,7 +67,10 @@ body{
     color: black;
   }
   #goals{
-    padding-top: 20vh; 
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   
   .fade-in {
